# agentscope-java

./: .gitattributes  .gitignore  .licenserc.yaml  pom.xml
docs/: _config.yml  _toc.yml  pyproject.toml
docs/_extra/: index.html
docs/_sphinx_extensions/: root_index_notice.py
docs/_static/: custom.css  homepage.css  tabs.js  version.js
docs/_templates/: docs-site-header.html  top-tabs.html  version-switcher.html
docs/en/task/: model.md
docs/scripts/: convert_v2_mdx.py  generate_v1_redirects.py
docs/v1/en/: intro.md
docs/v1/en/blogs/: agentscope-v1-harness.md  index.md
docs/v1/en/community/: contributors.md  overview.md
docs/v1/en/docs/harness/: architecture.md  filesystem.md  memory.md  overview.md  session.md  streaming.md  subagent.md  tool.md  workspace.md
docs/v1/en/docs/quickstart/: installation.md
docs/v1/en/docs/task/: agent-config.md  agui.md  hook.md  mcp.md  memory.md  multimodal.md  observability.md  plan.md  rag.md  (+5 more)
docs/v1/en/integration/: overview.md
docs/v1/zh/: intro.md
docs/v1/zh/blogs/: agentscope-v1-builder.md  index.md
docs/v1/zh/community/: overview.md
docs/v1/zh/integration/: overview.md
docs/v2/en/: intro.md
docs/v2/en/blogs/: agentscope-v1-harness.md  agentscope-v2-release.md
docs/v2/en/community/: contributors.md
docs/v2/en/docs/: change-log.md  index.md  quickstart.md
docs/v2/en/integration/: overview.md
docs/v2/zh/: intro.md
docs/v2/zh/blogs/: agentscope-v1-harness.md  agentscope-v2-release.md
docs/v2/zh/community/: contributors.md
docs/v2/zh/docs/: change-log.md  index.md  quickstart.md
docs/v2/zh/integration/: overview.md
docs/zh/harness/: filesystem.md  overview.md  skill.md
(+1547 files in other folders)
