# Copyright 2024-2026 the original author or authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "agentscope-java"
version = "0.3.0b1"
description = "AgentScope Java is an agent-oriented programming framework for building LLM applications with JDK 17+."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# This pyproject.toml exists solely as a shim to `pip install -e ".[dev]"` the
# jupyter-book / sphinx toolchain. There is no real Python package to ship —
# tell setuptools so explicitly to avoid the package-finder scanning a
# non-existent directory (which used to be `docs/en/` before the v1/v2 split).
[tool.setuptools]
py-modules = []
include-package-data = true

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "jupyter-book>=1.0.4.post1,<2.0.0",
    "sphinx-autoapi>=3.6.0",
    "sphinx-llms-txt>=0.5.3",
    "sphinx-sitemap>=2.5.0",
    "sphinx-design>=0.6.0",
    "furo>=2025.7.19",
    "sphinxcontrib-mermaid>=0.9.2",
]
